<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/ic_shape_rectangle"
    android:padding="5dp"
    android:layout_margin="5dp">


    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="90dp">

    <ImageView
        android:id="@+id/lv_homepage_line_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/image_destroy_01"
        android:adjustViewBounds="true"
        android:background="@null"/>

    <TextView
        android:id="@+id/lv_homepage_line_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/lv_main_information_pages"
        android:background="@drawable/ic_shape_rectangle3"
        android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <TextView
                android:id="@+id/lv_homepage_line_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/lv_main_title"
                android:maxLines="2"
                android:textStyle="bold"
                android:paddingHorizontal="3dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lv_homepage_line_read_state_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lv_main_information_progress"
                    android:textColor="@color/gray"
                    android:paddingTop="5dp"
                    android:paddingHorizontal="3dp"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/lv_homepage_line_read_state_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lv_main_information_progress_percentage"
                    android:textColor="@color/gray"
                    android:paddingTop="5dp"
                    android:paddingHorizontal="3dp"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/lv_homepage_line_file_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lv_main_information_file_store"
                    android:textColor="@color/gray"
                    android:paddingTop="5dp"
                    android:paddingHorizontal="3dp"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/lv_homepage_line_read_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv_main_latest_read_time"
                android:textColor="@color/gray"
                android:paddingTop="2dp"
                android:paddingBottom="5dp"
                android:paddingHorizontal="3dp"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/lv_homepage_line_more"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:rotation="90"
            android:contentDescription="@string/lv_tools_more"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:src="@mipmap/more_01" />

    </RelativeLayout>

</LinearLayout>