<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_shape_rectangle2"
    android:padding="1dp">

    <LinearLayout
        android:id="@+id/lv_tools_more_refresh"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@mipmap/loop_01"
            android:layout_gravity="center"
            android:paddingHorizontal="2dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/lv_tools_more_refresh"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_tools_more_add"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@mipmap/add_02"
            android:layout_gravity="center"
            android:paddingHorizontal="2dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/lv_tools_more_add"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_tools_more_favorite"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@mipmap/favorite_02"
            android:layout_gravity="center"
            android:paddingHorizontal="2dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/lv_tools_more_favorite"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_tools_more_history"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@mipmap/time_01"
            android:layout_gravity="center"
            android:paddingHorizontal="2dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/lv_tools_more_history"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

</LinearLayout>